# practice

./: 11.cpp  CMakeLists.txt  Game.cpp  Game.h  GameObjects.h  Makefile  README.md  Shapes.cpp  Shapes.h  constants.h  galaga  galaga_game  main.cpp  text_example  window  windowTEST.cpp
include/entity/: Actor.hpp  Enemy.hpp  EnemyBeam.hpp  EnemyBullet.hpp  EnemyExplosion.hpp  Fighter.hpp  FighterBullet.hpp  FighterExplosion.hpp  GameController.hpp  ScorePoint.hpp
include/infra/: AudioPlayer.hpp  Collider.hpp  Display.hpp  Entity.hpp  Game.hpp  Hud.hpp  Keyboard.hpp  Message.hpp  Path.hpp  Renderer.hpp  Resources.hpp  Scene.hpp  SceneManager.hpp  StageSymbols.hpp  StarsBackground.hpp  Util.hpp  Vec2.hpp
include/scene/: Initializing.hpp  OlPresents.hpp  Stage.hpp  Title.hpp
practice/: .gitignore  galga.cpp  main  main.cpp
practice/main.dSYM/Contents/Resources/DWARF/: main
src/entity/: Actor.cpp  Enemy.cpp  EnemyBeam.cpp  EnemyBullet.cpp  EnemyExplosion.cpp  Fighter.cpp  FighterBullet.cpp  FighterExplosion.cpp  GameController.cpp  ScorePoint.cpp
src/infra/: Collider.cpp  Game.cpp  Hud.cpp  Keyboard.cpp  Path.cpp  SceneManager.cpp  StageSymbols.cpp  StarsBackground.cpp  Util.cpp  Vec2.cpp
src/infra/sfml_impl/: AudioPlayer.cpp  Display.cpp  Renderer.cpp
src/scene/: Initializing.cpp  OlPresents.cpp  Stage.cpp  Title.cpp
